Launchpad automatic translations update.

--- a/po/stellarium-skycultures/it.po
+++ b/po/stellarium-skycultures/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-24 19:04+0000\n"
+"PO-Revision-Date: 2013-04-16 09:34+0000\n"
 "Last-Translator: Guybrush88 <Unknown>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-25 04:35+0000\n"
-"X-Generator: Launchpad (build 16540)\n"
+"X-Launchpad-Export-Date: 2013-04-17 05:14+0000\n"
+"X-Generator: Launchpad (build 16567)\n"
 
 #: nebulae/default/ngc2000names.dat:218
 msgid "47 Tuc"
@@ -522,7 +522,7 @@ msgstr "Ammasso della libellula"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr ""
+msgstr "Nebulosa della proboscide di elefante"
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -4026,7 +4026,7 @@ msgstr "Monuafe"
 
 #: skycultures/tongan/star_names.fab:7
 msgid "Motuliki"
-msgstr ""
+msgstr "Motuliki"
 
 #: skycultures/tupi/constellation_names.eng.fab:1
 msgid "White Ostrich"
