Launchpad automatic translations update.

--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-14 15:21+0700\n"
-"PO-Revision-Date: 2013-04-15 12:47+0000\n"
+"PO-Revision-Date: 2013-04-18 13:47+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-16 04:36+0000\n"
-"X-Generator: Launchpad (build 16564)\n"
+"X-Launchpad-Export-Date: 2013-04-19 05:13+0000\n"
+"X-Generator: Launchpad (build 16567)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -6820,7 +6820,7 @@ msgstr "Sistema Solar"
 
 #: plugins/Supernovae/src/Supernovae.cpp:71
 msgid "Historical Supernovae"
-msgstr "Sopernovas Históricas"
+msgstr "Supernovas Históricas"
 
 #: plugins/Supernovae/src/Supernovae.cpp:74
 msgid ""
