--- a/po/stellarium-skycultures/es.po
+++ b/po/stellarium-skycultures/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-04-15 11:17+0000\n"
-"Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
+"PO-Revision-Date: 2013-04-18 19:34+0000\n"
+"Last-Translator: Miguel Angel del Olmo <silinio45@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-16 04:36+0000\n"
-"X-Generator: Launchpad (build 16564)\n"
+"X-Launchpad-Export-Date: 2013-04-19 05:13+0000\n"
+"X-Generator: Launchpad (build 16567)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -526,7 +526,7 @@ msgstr "Cúmulo Libélula"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr ""
+msgstr "Nebula \"Trompa de elefante\""
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -551,7 +551,7 @@ msgstr "Hoyo en un cúmulo"
 
 #: nebulae/default/ngc2000names.dat:376
 msgid "Intergalactic Wanderer/Tramp"
-msgstr ""
+msgstr "Errante/Vagabundo intergaláctico"
 
 #: nebulae/default/ngc2000names.dat:377 nebulae/default/ngc2000names.dat:378
 msgid "Keenan's System"
@@ -584,7 +584,7 @@ msgstr "Cúmulo velero"
 
 #: nebulae/default/ngc2000names.dat:387
 msgid "Seyfert's Sextet"
-msgstr ""
+msgstr "Sexteto de Seyfert"
 
 #: nebulae/default/ngc2000names.dat:388
 msgid "Soul nebula"
@@ -3998,19 +3998,19 @@ msgstr "Fatanalua"
 
 #: skycultures/tongan/constellation_names.eng.fab:10
 msgid "Ae e'Uvea"
-msgstr ""
+msgstr "Ae e'Uvea"
 
 #: skycultures/tongan/constellation_names.eng.fab:11
 msgid "Kapakau'o'tafahi"
-msgstr ""
+msgstr "Kapakau'o'tafahi"
 
 #: skycultures/tongan/star_names.fab:1
 msgid "Ma'afutoka"
-msgstr ""
+msgstr "Ma'afutoka"
 
 #: skycultures/tongan/star_names.fab:2
 msgid "Ma'afulele"
-msgstr ""
+msgstr "Ma'afulele"
 
 #: skycultures/tongan/star_names.fab:3
 msgid "Velitoa hififo"
@@ -4022,7 +4022,7 @@ msgstr "Velitoa hahake"
 
 #: skycultures/tongan/star_names.fab:5
 msgid "Hikule'o"
-msgstr ""
+msgstr "Hikule'o"
 
 #: skycultures/tongan/star_names.fab:6
 msgid "Monuafe"
