--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-14 15:21+0700\n"
-"PO-Revision-Date: 2013-04-16 03:31+0000\n"
+"PO-Revision-Date: 2013-04-18 23:57+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-17 05:13+0000\n"
+"X-Launchpad-Export-Date: 2013-04-19 05:13+0000\n"
 "X-Generator: Launchpad (build 16567)\n"
 "Language: be\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -269,6 +269,10 @@ msgid ""
 "Henriksson in his article <em>Einstein's Theory of Relativity Confirmed by "
 "Ancient Solar Eclipses</em> (%1). See for more info %2here%3."
 msgstr ""
+"Гэтая гістарычная формула была атрыманая К. Шохам у 1931 г. і была "
+"выкарыстаная Ґ. Генрыксанам у ягоным артыкуле <em>Тэорыя адноснасьці "
+"Айнштайна, пацьверджаная даўнімі зацьменнямі Сонца</em> (%1). Болей зьвестак "
+"глядзі %2тут%3."
 
 #: src/core/StelCore.cpp:1425
 #, qt-format
@@ -276,6 +280,8 @@ msgid ""
 "This empirical equation was published by G. M. Clemence in the article "
 "<em>On the system of astronomical constants</em> (%1)."
 msgstr ""
+"Гэтая эмпірычная формула была апублікаваная Дж.М. Клемэнсам у артыкуле "
+"<em>Наконт сыстэмы астранамічных канстантаў</em> (%1)."
 
 #: src/core/StelCore.cpp:1428
 #, qt-format
@@ -285,6 +291,11 @@ msgid ""
 "<em>Astronomical Formulae for Calculators</em>. It was also adopted in the "
 "PC program SunTracker Pro."
 msgstr ""
+"Гэтая формула базуецца на вывучэньні назіраньняў Сонца, Месяца й плянэтаў, "
+"што адбываліся пасьля 1650 г., зробленых Спэнсэрам Джонсам (%1), яна "
+"выкарыстаная Жанам Мэёсам у <em>Астранамічных формулах для "
+"калькулятараў</em>. Таксама яна выкарыстоўваецца ў кампутарнай праґраме "
+"SunTracker Pro."
 
 #: src/core/StelCore.cpp:1432
 msgid ""
@@ -292,6 +303,9 @@ msgid ""
 "adopted in the <em>Astronomical Ephemeris</em> and in the <em>Canon of Solar "
 "Eclipses</em> by Mucke & Meeus (1983)."
 msgstr ""
+"Гэта крыху зьмененая вэрсія формулы МАС (1952), прынятая <em>Астранамічнымі "
+"эфэмэрыдамі</em> і<em>Канонам сонечных зацьменьняў</em>, напісаных Муке й "
+"Мэёсам (1983)."
 
 #: src/core/StelCore.cpp:1436
 msgid ""
@@ -311,6 +325,8 @@ msgid ""
 "article <em>The accelerations of the earth and moon from early astronomical "
 "observations</em> (%1)."
 msgstr ""
+"Гэты раўнаньне было апублікаванае П.М. Мюлерам і Ф.Р. Стэфэнсанам у артыкуле "
+"<em>Паскарэньні Зямлі й Месяца ад першых астранамічных назіраньняў</em> (%1)."
 
 #: src/core/StelCore.cpp:1443
 #, qt-format
@@ -318,6 +334,8 @@ msgid ""
 "This equation was published by F. R. Stephenson in the article <em>Pre-"
 "Telescopic Astronomical Observations</em> (%1)."
 msgstr ""
+"Гэты раўнаньне было апублікаванае Ф.Р. Стэфэнсанам у артыкуле "
+"<em>Астранамічныя назіраньні да эпохі тэлескопаў</em> (%1)."
 
 #: src/core/StelCore.cpp:1446
 #, qt-format
@@ -327,6 +345,10 @@ msgid ""
 "<em>Polynomial approximations for the correction delta T E.T.-U.T. in the "
 "period 1800-1975</em> (%1) as fit through data published by Brouwer (1952)."
 msgstr ""
+"Гэтае раўнаньне паліному 12-га парадку (састарэлае й замененае Шмадэлем і "
+"Зэхам (1988)) было апублікаванае Л.Д. Шмадэлем і Ґ. Зэхам у артыкуле "
+"<em>Палінамінальная апраксымацыя паправак дэльты T E.T.-U.T. у пэрыяд 1800-"
+"1975</em> (%1) як апраксымацыя даньняў, апублікаваных Браўэрам (1952)."
 
 #: src/core/StelCore.cpp:1449
 msgid ""
@@ -334,6 +356,8 @@ msgid ""
 "Programs and Tables from -4000 to +2800</em> (1986) and in the PC "
 "planetarium program RedShift."
 msgstr ""
+"Гэты альґарытм быў прыняты <em>Плянэтарнымі праґрамамі й табліцамі ад -4000 "
+"да +2800</em> (1986) і кампутарнай праґрамай RedShift."
 
 #: src/core/StelCore.cpp:1452
 #, qt-format
@@ -377,6 +401,9 @@ msgid ""
 "Period 1800-1988</em> (%1) as data fit through values given by Stephenson & "
 "Morrison (1984)."
 msgstr ""
+"Гэтае раўнаньне паліному 12-га парадку было апублікаванае Л.Д. Шмадэлем і Ґ. "
+"Зэхам у артыкуле <em>Эмпірычныя ператварэньні з U.T. у E.T. для пэрыяду 1800-"
+"1988</em> (%1) як апраксымацыя даньняў Стэфэнсана й Морысана (1984)."
 
 #: src/core/StelCore.cpp:1467
 msgid ""
@@ -384,6 +411,9 @@ msgid ""
 "version of the ELP 2000-85 lunar theory in their <em>Lunar Tables and "
 "Programs from 4000 B.C. to A.D. 8000</em> (1991)."
 msgstr ""
+"Гэтая формула была выкарыстаная М. Шапронам-Тузэ і Ж. Шапронам у скарочанай "
+"вэрсіі месячнай тэорыі ELP 2000-85 у іхнай кнізе <em>Месячныя табліцы й "
+"праґрамы ад 4000 г. да н.э. да 8000 г. н.э.</em> (1991)."
 
 #: src/core/StelCore.cpp:1470
 #, qt-format
@@ -392,6 +422,9 @@ msgid ""
 "article <em>Long-Term Fluctuations in the Earth's Rotation: 700 BC to AD "
 "1990</em> (%1)."
 msgstr ""
+"Гэты раўнаньне было апублікаванае Ф.Р. Стэфэнсанам і Л.В. Морысанам у "
+"артыкуле <em>Доўгачасовыя флюнктуацыі аварачэньня Зямлі: ад 700 г. да н.э. "
+"да 1990 г. н.э.</em> (%1)."
 
 #: src/core/StelCore.cpp:1473
 #, qt-format
@@ -408,6 +441,9 @@ msgid ""
 "used. Table for 1620..2000, and includes a variant of Chapront, Chapront-"
 "Touze & Francou (1997) for dates outside 1620..2000."
 msgstr ""
+"З Ж. Мэёсавых <em>Астранамічных альґарытмаў</em> (2-е выд., 1998), шырока "
+"ўжываецца. Табліцы для 1620—2000 гг., улучае варыянт Шапрона, Шапронам-Тузэ "
+"й Франку (1997) для гадаў па-за абсягам 1620—2000."
 
 #: src/core/StelCore.cpp:1479
 #, qt-format
@@ -425,6 +461,8 @@ msgid ""
 "This polynome was published by J. Meeus and L. Simons in article "
 "<em>Polynomial approximations to Delta T, 1620-2000 AD</em> (%1)."
 msgstr ""
+"Гэты паліном быў апублікаваны Ж. Мэёсам і Л. Сімансам у артыкуле "
+"<em>Палінамінальнае набліжэньне да дэльта T, 1620-2000 н.э.</em> (%1)."
 
 #: src/core/StelCore.cpp:1485
 msgid ""
@@ -432,6 +470,9 @@ msgid ""
 "Personal Computer</em> (2000) provides simple 3rd-order polynomial data fits "
 "for the recent past."
 msgstr ""
+"Чацьвёртае выданьне <em>Астраноміі на пэрсанальным кампутары</em> (2000) О. "
+"Мантэнбрука й Т. Пфлеґера ўтрымлівае просты паліном 3-га парадку для "
+"нядаўняй мінуўшчыны."
 
 #: src/core/StelCore.cpp:1488
 msgid ""
@@ -440,6 +481,10 @@ msgid ""
 "<em>Calendrical Tabulations</em> (2002). It is based on Jean Meeus' "
 "<em>Astronomical Algorithms</em> (1991)."
 msgstr ""
+"Э.М. Рэйнґальд і Н. Дэршовіц прадставілі гэтую палімінальную апраксымацыю ў "
+"<em>Календарных разьліках</em> (3-е выд., 2007) і ў сваіх <em>Календарных "
+"табліцах</em> (2002). Яна базуецца на <em>Астранамічных альґарытмах</em> "
+"Жана Мэёса (1991)."
 
 #: src/core/StelCore.cpp:1491
 #, qt-format
@@ -448,6 +493,9 @@ msgid ""
 "in article <em>Historical values of the Earth's clock error %1T and the "
 "calculation of eclipses</em> (%2) with addendum in (%3)."
 msgstr ""
+"Гэты важны разьвязак быў апублікаваны Л.В. Морысанам і Ф.Р. Стэфэнсанам у "
+"артыкуле <em>Гістарычныя значэньні памылкі зямнога гадзіньніка %1T і разьлік "
+"зацьменьняў </em> (%2) з дадаткам у (%3)."
 
 #: src/core/StelCore.cpp:1494
 #, qt-format
@@ -457,6 +505,10 @@ msgid ""
 "cosine and square function. This is based on a possible periodicy described "
 "by Stephenson (%2). See for more info %3here%4."
 msgstr ""
+"З даўжыні дня (ДД, вызначанай Стэфэнсанам і Морысанам (%2)), Віктар Р'ейс, "
+"выкарыстоўваючы сымплексныя аптымізацыі з функцыямі косынусу й квадрату, "
+"вывеў формулу %1T. Яна базуецца на магчымай пэрыядычнасьці, апісанай "
+"Стэфэнсанам (%2). Болей зьвестак глядзі %3тут%4."
 
 #: src/core/StelCore.cpp:1497
 #, qt-format
@@ -467,6 +519,12 @@ msgid ""
 "Solar Eclipses: -1900 to +3000</em> (2006). This formula is also used in the "
 "solar, lunar and planetary ephemeris program SOLEX."
 msgstr ""
+"Гэты разьвязак, атрыманы Ф. Эспэнакам і Ж. Мэёсам, базуецца на формуле "
+"Морысана й Стэфэнсана (2004) і паліноме, які праходзіць праз таблічныя "
+"значэньні 1620—2000, выкарыстоўваецца %1пляцоўкай зацьменьняў NASA%2 й іхным "
+"<em>Пяцітысячагадовым канонам сонечных зацьменьняў: ад -1900 да +3000</em> "
+"(2006). Гэтая формула таксама выкарыстоўваецца ў праґраме разьліку сонечных, "
+"месячных і плянэтарных эфэмэрыд SOLEX."
 
 #: src/core/StelCore.cpp:1497
 msgid "Used by default."
@@ -853,7 +911,7 @@ msgstr "Шмадэль і Зэх (1988)"
 
 #: src/gui/ConfigurationDialog.cpp:1146
 msgid "Chapront-Touze & Chapront (1991)"
-msgstr ""
+msgstr "Шапрон-Тузэ і Шапрон (1991)"
 
 #: src/gui/ConfigurationDialog.cpp:1147
 msgid "Stephenson & Morrison (1995)"
@@ -865,7 +923,7 @@ msgstr "Стэфэнсан (1997)"
 
 #: src/gui/ConfigurationDialog.cpp:1150
 msgid "Meeus (1998) (with Chapront, Chapront-Touze & Francou (1997))"
-msgstr ""
+msgstr "Мэёс (1998) (з Шапронам, Шапронам-Тузэ і Франку (1997))"
 
 #: src/gui/ConfigurationDialog.cpp:1151
 msgid "JPL Horizons"
@@ -873,7 +931,7 @@ msgstr "Гарызонты ЛРР"
 
 #: src/gui/ConfigurationDialog.cpp:1152
 msgid "Meeus & Simons (2000)"
-msgstr ""
+msgstr "Мэёс і Сыманс (2000)"
 
 #: src/gui/ConfigurationDialog.cpp:1153
 msgid "Montenbruck & Pfleger (2000)"
@@ -889,11 +947,11 @@ msgstr "Морысан і Стэфэнсан (2004, 2005)"
 
 #: src/gui/ConfigurationDialog.cpp:1157
 msgid "Espenak & Meeus (2006)"
-msgstr ""
+msgstr "Эспэнак і Мэёс (2006)"
 
 #: src/gui/ConfigurationDialog.cpp:1158
 msgid "Reijs (2006)"
-msgstr ""
+msgstr "Р'ейс (2006)"
 
 #: src/gui/ConfigurationDialog.cpp:1159
 #, qt-format
@@ -1039,7 +1097,7 @@ msgstr "Распрацоўнік: %1"
 #: src/gui/HelpDialog.cpp:315
 #, qt-format
 msgid "Continuous Integration: %1"
-msgstr ""
+msgstr "Няспынная інтэґрацыя: %1"
 
 #: src/gui/HelpDialog.cpp:316 src/gui/HelpDialog.cpp:317
 #, qt-format
@@ -3801,11 +3859,11 @@ msgstr "Зьнічкі"
 
 #: src/ui_viewDialog.h:1224
 msgid "Hourly zenith rate"
-msgstr ""
+msgstr "Часьціня зьнічак за гадзіну"
 
 #: src/ui_viewDialog.h:1226
 msgid "ZHR:"
-msgstr ""
+msgstr "ЧЗГ:"
 
 #: src/ui_viewDialog.h:1229
 msgid "Limit Magnitudes (for unaided/binocular observers)"
@@ -3817,11 +3875,11 @@ msgstr "Абмежаваць велічыні"
 
 #: src/ui_viewDialog.h:1233
 msgid "Stars to magnitude"
-msgstr ""
+msgstr "Зоркі да велічыні"
 
 #: src/ui_viewDialog.h:1237
 msgid "Nebulas to magitude"
-msgstr ""
+msgstr "Туманнасьці да велічыні"
 
 #: src/ui_viewDialog.h:1240
 msgid "Constellations"
