--- a/po/stellarium/bg.po
+++ b/po/stellarium/bg.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-14 15:21+0700\n"
-"PO-Revision-Date: 2013-04-18 21:33+0000\n"
+"PO-Revision-Date: 2013-04-19 11:24+0000\n"
 "Last-Translator: Bogdan Marinov <daggerstab@gmail.com>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-19 05:13+0000\n"
+"X-Launchpad-Export-Date: 2013-04-20 05:09+0000\n"
 "X-Generator: Launchpad (build 16567)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -3993,7 +3993,7 @@ msgstr ""
 
 #: src/ui_configurationDialog.h:1025
 msgid "Right ascension/Declination (of date)"
-msgstr ""
+msgstr "Ректасцензия/деклинация (по дата)"
 
 #: src/ui_configurationDialog.h:1027
 msgid "Galactic coordinates, equinox of J2000.0"
@@ -4313,11 +4313,11 @@ msgstr ""
 
 #: src/ui_shortcutsDialog.h:200
 msgid "Restore Defaults"
-msgstr ""
+msgstr "Възст. оригиналните"
 
 #: src/ui_shortcutsDialog.h:201
 msgid "Apply"
-msgstr ""
+msgstr "Прилагане"
 
 #: src/ui_AtmosphereDialog.h:176
 msgid "Atmosphere Details"
