Launchpad automatic translations update.

--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-21 22:32+0700\n"
-"PO-Revision-Date: 2013-04-03 13:38+0000\n"
+"PO-Revision-Date: 2013-04-22 07:03+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-22 05:17+0000\n"
-"X-Generator: Launchpad (build 16567)\n"
+"X-Launchpad-Export-Date: 2013-04-23 05:17+0000\n"
+"X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -3444,7 +3444,7 @@ msgstr "Pandangan telrad"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Papar pulsar"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3452,7 +3452,7 @@ msgstr "Tetingkap konfigurasi pulsar"
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Papar kuasar"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -5023,7 +5023,7 @@ msgstr "Kanta"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Pendarab:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
