--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-21 22:32+0700\n"
-"PO-Revision-Date: 2013-04-03 14:24+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-04-22 13:43+0000\n"
+"Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-22 05:18+0000\n"
-"X-Generator: Launchpad (build 16567)\n"
+"X-Launchpad-Export-Date: 2013-04-23 05:17+0000\n"
+"X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -290,10 +290,10 @@ msgid ""
 "<em>Astronomical Formulae for Calculators</em>. It was also adopted in the "
 "PC program SunTracker Pro."
 msgstr ""
-"Эта формула основана на изучении пост-1650 наблюдений Солнца, Луны и планет "
-"Спенсером Джонсом (%1) и использована Жаном Меёсом в его книге "
-"<em>Астрономические формулы для калькуляторов</em>. Кроме того эта формула "
-"используется в компьютерной программе SunTracker Pro."
+"Эта формула основана на изучении Спенсером Джонсом (%1) наблюдений Солнца, "
+"Луны и планет, происходивших после 1650 г.,  и использована Жаном Меёсом в "
+"его книге <em>Астрономические формулы для калькуляторов</em>. Кроме того эта "
+"формула используется в компьютерной программе SunTracker Pro."
 
 #: src/core/StelCore.cpp:1432
 msgid ""
@@ -3435,7 +3435,7 @@ msgstr "Поле зрения Telrad"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Показать пульсары"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3443,7 +3443,7 @@ msgstr "Окно настройки плагина \"Пульсары\""
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Показать квазары"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -5019,7 +5019,7 @@ msgstr "Линзы"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Множитель:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
