--- a/po/stellarium/fr.po
+++ b/po/stellarium/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-21 22:32+0700\n"
-"PO-Revision-Date: 2013-04-04 15:07+0000\n"
+"PO-Revision-Date: 2013-04-22 19:49+0000\n"
 "Last-Translator: Nicolas Martignoni <Unknown>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-22 05:14+0000\n"
-"X-Generator: Launchpad (build 16567)\n"
+"X-Launchpad-Export-Date: 2013-04-23 05:17+0000\n"
+"X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -3459,7 +3459,7 @@ msgstr "Viseur Telrad"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Afficher les pulsars"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3467,7 +3467,7 @@ msgstr "Fenêtre de configuration des pulsars"
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Afficher les quasars"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -4339,7 +4339,7 @@ msgstr "Inverser les couleurs"
 
 #: src/ui_configurationDialog.h:1118
 msgid "Star catalog updates"
-msgstr "Mises à jour du catalogue d'étoiles"
+msgstr "Catalogue d'étoiles"
 
 #: src/ui_configurationDialog.h:1120
 msgid "Click here to start downloading"
@@ -5047,7 +5047,7 @@ msgstr "Lentilles"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Grossissement"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
@@ -5276,7 +5276,7 @@ msgstr ""
 #. TRANSLATORS: Title of a section in the About tab of the Satellites window
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:308
 msgid "TLE data updates"
-msgstr "Mises à jours des données TLE"
+msgstr "Mises à jour des données TLE"
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:309
 msgid ""
@@ -5411,7 +5411,7 @@ msgstr ""
 #: plugins/Pulsars/src/gui/PulsarsDialog.cpp:160
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:143
 msgid "Internet updates disabled"
-msgstr "Mises à jour via Internet désactivées"
+msgstr "Mise à jour via Internet désactivée"
 
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:351
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:383
