--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-21 22:32+0700\n"
-"PO-Revision-Date: 2013-04-03 20:24+0000\n"
+"PO-Revision-Date: 2013-04-23 21:09+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-22 05:13+0000\n"
-"X-Generator: Launchpad (build 16567)\n"
+"X-Launchpad-Export-Date: 2013-04-24 04:40+0000\n"
+"X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -3424,7 +3424,7 @@ msgstr "Zaměřovač Telrad"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Zobrazit pulsary"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3432,7 +3432,7 @@ msgstr "Okno nastavení pulsarů"
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Zobrazit kvasary"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -5000,7 +5000,7 @@ msgstr "Čočky"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Zvětšení:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
