--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-24 22:33+0700\n"
-"PO-Revision-Date: 2013-04-24 21:13+0000\n"
-"Last-Translator: Zbyněk Schwarz <Unknown>\n"
+"PO-Revision-Date: 2013-04-25 10:49+0000\n"
+"Last-Translator: Tomáš Bednář <bednto@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-25 05:10+0000\n"
+"X-Launchpad-Export-Date: 2013-04-26 05:10+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -43,7 +43,7 @@ msgstr "Autor: "
 
 #: src/core/modules/LandscapeMgr.cpp:511
 msgid "Location: "
-msgstr "Místo: "
+msgstr "Lokace "
 
 #: src/core/modules/LandscapeMgr.cpp:516
 #, qt-format
