--- a/po/stellarium/fi.po
+++ b/po/stellarium/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-24 22:33+0700\n"
-"PO-Revision-Date: 2013-04-21 18:57+0000\n"
+"PO-Revision-Date: 2013-04-25 15:22+0000\n"
 "Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-25 05:11+0000\n"
+"X-Launchpad-Export-Date: 2013-04-26 05:10+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -6952,7 +6952,7 @@ msgstr "Näytä kvasaarien jakauma"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:266
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:275
 msgid "Enable display at startup"
-msgstr ""
+msgstr "Näytä aina käynnistyessä"
 
 #: plugins/Pulsars/src/Pulsars.cpp:70
 msgid "Pulsars"
