Launchpad automatic translations update.

--- a/po/stellarium-skycultures/es.po
+++ b/po/stellarium-skycultures/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-04-18 19:34+0000\n"
-"Last-Translator: Miguel Angel del Olmo <silinio45@gmail.com>\n"
+"PO-Revision-Date: 2013-04-28 00:59+0000\n"
+"Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-19 05:13+0000\n"
-"X-Generator: Launchpad (build 16567)\n"
+"X-Launchpad-Export-Date: 2013-04-28 04:34+0000\n"
+"X-Generator: Launchpad (build 16580)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -104,7 +104,7 @@ msgstr "Cúmulo árbol de navidad"
 
 #: nebulae/default/ngc2000names.dat:242
 msgid "Cocoon nebula"
-msgstr "Nebulos del Capullo"
+msgstr "Nebulosa del Capullo"
 
 #: nebulae/default/ngc2000names.dat:243
 msgid "Cone nebula"
@@ -191,7 +191,7 @@ msgstr "Nebulosa cabeza de caballo"
 
 #: nebulae/default/ngc2000names.dat:271
 msgid "Hourglass nebula"
-msgstr "Neblosa Reloj de arena"
+msgstr "Nebulosa Reloj de arena"
 
 #: nebulae/default/ngc2000names.dat:272
 msgid "Hubble's variable nebula"
@@ -510,7 +510,7 @@ msgstr "Torre de enfriamiento"
 
 #: nebulae/default/ngc2000names.dat:363
 msgid "Crowbar galaxy"
-msgstr ""
+msgstr "Galaxia palanca"
 
 #: nebulae/default/ngc2000names.dat:364
 msgid "Sagittarius Star Cloud"
@@ -526,7 +526,7 @@ msgstr "Cúmulo Libélula"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr "Nebula \"Trompa de elefante\""
+msgstr "Nebulosa Trompa de elefante"
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -543,7 +543,7 @@ msgstr "Cúmulo en foma de corazón"
 
 #: nebulae/default/ngc2000names.dat:374
 msgid "Herring galaxy"
-msgstr ""
+msgstr "Galaxia arenque"
 
 #: nebulae/default/ngc2000names.dat:375
 msgid "Hole in a cluster"
