--- a/po/stellarium/ca.po
+++ b/po/stellarium/ca.po
@@ -11,13 +11,13 @@ msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 22:39+0300\n"
-"PO-Revision-Date: 2013-04-14 21:33+0000\n"
+"PO-Revision-Date: 2013-04-27 10:07+0000\n"
 "Last-Translator: Daniel Alomar i Claramonte <daniel.adastra@gmail.com>\n"
 "Language-Team: Català <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-27 05:12+0000\n"
+"X-Launchpad-Export-Date: 2013-04-28 04:34+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -3446,7 +3446,7 @@ msgstr "Punt de mira Telrad"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Mostra els pulsars"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3454,7 +3454,7 @@ msgstr "Finestra de configuració de púlsars"
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Mostra els quasars"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -5029,7 +5029,7 @@ msgstr "Lents"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Multiplicador:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
@@ -6985,7 +6985,7 @@ msgstr "Activar la visualització de la distribució de quàsars"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:266
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:275
 msgid "Enable display at startup"
-msgstr ""
+msgstr "Activar quadre a l'inici"
 
 #: plugins/Pulsars/src/Pulsars.cpp:70
 msgid "Pulsars"
