--- a/po/stellarium/es.po
+++ b/po/stellarium/es.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 22:39+0300\n"
-"PO-Revision-Date: 2013-04-18 13:47+0000\n"
+"PO-Revision-Date: 2013-04-28 00:41+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-27 05:19+0000\n"
+"X-Launchpad-Export-Date: 2013-04-28 04:34+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -3533,7 +3533,7 @@ msgstr "Mira telrad"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Mostrar púlsares"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3541,7 +3541,7 @@ msgstr "Ventana de configuración de púlsares"
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Mostrar cuásares"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -5088,7 +5088,7 @@ msgstr "Lentes"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Multiplicador:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
@@ -7021,7 +7021,7 @@ msgstr "Activar la vista de dispersión de cuásares"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:266
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:275
 msgid "Enable display at startup"
-msgstr ""
+msgstr "Habilitar muestra al inicio"
 
 #: plugins/Pulsars/src/Pulsars.cpp:70
 msgid "Pulsars"
