--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 22:39+0300\n"
-"PO-Revision-Date: 2013-04-22 07:03+0000\n"
+"PO-Revision-Date: 2013-04-28 09:17+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-27 05:17+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:35+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -6969,7 +6969,7 @@ msgstr "Benarkan paparan agihan untuk kuasar"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:266
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:275
 msgid "Enable display at startup"
-msgstr ""
+msgstr "Benarkan paparan semasa permulaan"
 
 #: plugins/Pulsars/src/Pulsars.cpp:70
 msgid "Pulsars"
