--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 22:39+0300\n"
-"PO-Revision-Date: 2013-04-21 11:23+0000\n"
+"PO-Revision-Date: 2013-04-28 16:46+0000\n"
 "Last-Translator: Pavol Gajdoš <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-27 05:19+0000\n"
+"X-Launchpad-Export-Date: 2013-04-29 04:35+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -3426,7 +3426,7 @@ msgstr "Zameriavač Telrad"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Zobraz pulzary"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3434,7 +3434,7 @@ msgstr "Okno nastavení pulzarov"
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Zobraz kvazary"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -5000,7 +5000,7 @@ msgstr "Šošovky"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Zväčšenie:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
@@ -6948,7 +6948,7 @@ msgstr "Zapnúť zobrazenie distribúcie kvazarov"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:266
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:275
 msgid "Enable display at startup"
-msgstr ""
+msgstr "Povoliť zobrazenie pri štarte"
 
 #: plugins/Pulsars/src/Pulsars.cpp:70
 msgid "Pulsars"
