Launchpad automatic translations update.

--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 22:39+0300\n"
-"PO-Revision-Date: 2013-04-24 21:54+0000\n"
+"PO-Revision-Date: 2013-04-30 16:14+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-27 05:21+0000\n"
+"X-Launchpad-Export-Date: 2013-05-01 04:42+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -3906,11 +3906,11 @@ msgstr "THZ:"
 
 #: src/ui_viewDialog.h:1229
 msgid "Limit Magnitudes (for unaided/binocular observers)"
-msgstr "Limitar as magnitudes (para observadores a olho nu/com binóculo)"
+msgstr "Limita as magnitudes (para observadores a olho nu/com binóculo)"
 
 #: src/ui_viewDialog.h:1231
 msgid "Limit Magnitudes"
-msgstr "Limitar as magnitudes"
+msgstr "Limitação de magnitudes"
 
 #: src/ui_viewDialog.h:1233
 msgid "Stars to magnitude"
@@ -7050,7 +7050,7 @@ msgstr "Ativar a exibição da distribuição dos quasares"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:266
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:275
 msgid "Enable display at startup"
-msgstr "Ativar exibição ao iniciar"
+msgstr "Ativar a exibição ao iniciar"
 
 #: plugins/Pulsars/src/Pulsars.cpp:70
 msgid "Pulsars"
