--- a/po/stellarium/en_GB.po
+++ b/po/stellarium/en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 22:39+0300\n"
-"PO-Revision-Date: 2013-04-16 20:24+0000\n"
+"PO-Revision-Date: 2013-04-30 22:19+0000\n"
 "Last-Translator: Andi Chandler <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-27 05:21+0000\n"
+"X-Launchpad-Export-Date: 2013-05-01 04:42+0000\n"
 "X-Generator: Launchpad (build 16580)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -3430,7 +3430,7 @@ msgstr "Telrad sight"
 
 #: src/translations.h:642
 msgid "Show pulsars"
-msgstr ""
+msgstr "Show pulsars"
 
 #: src/translations.h:643
 msgid "Pulsars configuration window"
@@ -3438,7 +3438,7 @@ msgstr "Pulsars configuration window"
 
 #: src/translations.h:646
 msgid "Show quasars"
-msgstr ""
+msgstr "Show quasars"
 
 #: src/translations.h:647
 msgid "Quasars configuration window"
@@ -5007,7 +5007,7 @@ msgstr "Lenses"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplier:"
-msgstr ""
+msgstr "Multiplier:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
@@ -6951,7 +6951,7 @@ msgstr "Enable display of distribution for quasars"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:266
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:275
 msgid "Enable display at startup"
-msgstr ""
+msgstr "Enable display at startup"
 
 #: plugins/Pulsars/src/Pulsars.cpp:70
 msgid "Pulsars"
