--- a/po/stellarium/eu.po
+++ b/po/stellarium/eu.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-26 22:39+0300\n"
-"PO-Revision-Date: 2013-02-23 14:06+0000\n"
+"PO-Revision-Date: 2013-05-02 19:50+0000\n"
 "Last-Translator: Asier Iturralde Sarasola <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-27 05:11+0000\n"
-"X-Generator: Launchpad (build 16580)\n"
+"X-Launchpad-Export-Date: 2013-05-03 05:13+0000\n"
+"X-Generator: Launchpad (build 16598)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
 msgid "Meridian"
@@ -108,7 +108,7 @@ msgstr "Nebulosa planetarioa"
 
 #: src/core/modules/Nebula.cpp:395
 msgid "Dark Nebula"
-msgstr ""
+msgstr "Nebulosa iluna"
 
 #: src/core/modules/Nebula.cpp:398
 msgid "Cluster associated with nebulosity"
